--- a/test/aspect/WORKSPACE
+++ b/test/aspect/WORKSPACE
@@ -16,18 +16,8 @@ setup_step_2()
 ##
 ## Python toolchains for testing compatibility to various Python versions
 ##
-
-load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
-load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")
-
-# Keep in sync with //test/aspect/MODULE.bazel
-maybe(
-    http_archive,
-    name = "rules_python",
-    sha256 = "e85ae30de33625a63eca7fc40a94fea845e641888e52f32b6beea91e8b1b2793",
-    strip_prefix = "rules_python-0.27.1",
-    urls = ["https://github.com/bazelbuild/rules_python/releases/download/0.27.1/rules_python-0.27.1.tar.gz"],
-)
+## We rely on rules_python provided by DWYU as dependency, since we we do not profit from using a custom version.
+##
 
 load("@rules_python//python:repositories.bzl", "python_register_multi_toolchains")
 
