Remove mypy aspect
The project providing the aspect does not offer a proper modern bzlmod
integration. Contribution is difficult due to the maintainer having
almost no time.
We do not really need a bazelized solution for this. We already
use the pre-commit framework and it offers as well a mypy integeation.
On top, we can more easily stop ignoring import errors with the
pre-commit based mypy integration.

--- a/test/aspect/BUILD
+++ b/test/aspect/BUILD
@@ -1,4 +1,4 @@
-load("@rules_python//python:defs.bzl", "py_library", "py_test")
+load("@rules_python//python:defs.bzl", "py_test")
 
 py_test(
     name = "result_test",
@@ -22,10 +22,4 @@ py_test(
         "version.py",
         "version_test.py",
     ],
-)
-
-# Helper target to enable mypy
-py_library(
-    name = "python_files",
-    srcs = glob(["**/*.py"]),
 )
