--- a/mypy.ini
+++ b/mypy.ini
@@ -1,11 +1,9 @@
 # https://mypy.readthedocs.io/en/stable/config_file.html
 [mypy]
-# Required to work with Bazel integration
+# Without this mypy stumbles over us having several files with the same name in multiple directories, e.g. main
 explicit_package_bases = true
 # Preferred error reporting behavior
 pretty = true
-# Third party dependencies are not picked up by mypy
-ignore_missing_imports = true
 # Unreliable due to false positives
 warn_return_any = false
 # Additional checks beyond default settings
@@ -13,3 +11,5 @@ warn_redundant_casts = true
 warn_unused_ignores = true
 warn_no_return = true
 warn_unreachable = true
+# Enable relative imports in the test orchestration scripts
+mypy_path = test/aspect/:test/apply_fixes/
