Use .bazelignore to allow testing '//...'
We did not do so in the past due to how mypy discovered Python files with
Python in the past. Now that we use mypy without Bazel via pre-commit
this restriction no longer applies.
We prefer maintaining a .bazelignore file instead of a detailed test command.
This prevents us missing tests.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Unit tests
-        run: ./scripts/unit_tests.sh
+        run: bazel test //...
       - name: Build aspect integration tests
         run: ./scripts/build_aspect_tests.sh
       - name: Build examples
