--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -6,6 +6,7 @@ module(
 
 bazel_dep(name = "rules_cc", version = "0.0.8")
 bazel_dep(name = "rules_python", version = "0.27.1")
+bazel_dep(name = "bazel_skylib", version = "1.7.1")
 
 non_module_dependencies = use_extension("//third_party:extensions.bzl", "non_module_dependencies")
 use_repo(non_module_dependencies, "dwyu_pcpp")
@@ -14,8 +15,8 @@ use_repo(non_module_dependencies, "dwyu_pcpp")
 ### Development Dependencies
 ###
 
-# Keep in sync with third_party/dependencies.bzl
-bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
+bazel_dep(name = "aspect_bazel_lib", version = "2.7.9", dev_dependency = True)
+bazel_dep(name = "stardoc", version = "0.7.0", dev_dependency = True)
 
 python = use_extension(
     "@rules_python//python/extensions:python.bzl",
