--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,10 +21,10 @@ repos:
         additional_dependencies:
           - mdformat-gfm
   - repo: https://github.com/keith/pre-commit-buildifier
-    rev: 6.4.0
+    rev: 7.1.2
     hooks:
       - id: buildifier
-        args: [ "--warnings=+out-of-order-load,+unsorted-dict-items,+native-py" ]
+        args: [ "--warnings=-load,+unsorted-dict-items,+native-py" ]
       - id: buildifier-lint
         args: [
           "--diff_command='diff'",
