refactor: Load rules_cc content from proper locations
Loading all public symbols from `<language>/defs.bzl` is a deprecated
approach for language rules. More fine grained loading prevents Bazel
analyzing things unrelated to what one actually is interested in.
This impacts us, as only for the fine grained loading corresponding
bzl_library targets exists we need for creating our documentation with
stardoc.

--- a/src/cc_info_mapping/private/BUILD
+++ b/src/cc_info_mapping/private/BUILD
@@ -9,4 +9,5 @@ bzl_library(
         "transitive_deps.bzl",
     ],
     visibility = ["//src/cc_info_mapping:__pkg__"],
+    deps = ["@rules_cc//cc/common"],
 )
