--- a/test/aspect/tree_artifact/BUILD
+++ b/test/aspect/tree_artifact/BUILD
@@ -1,4 +1,4 @@
-load("@rules_python//python:defs.bzl", "py_binary")
+load("@rules_python//python:py_binary.bzl", "py_binary")
 load(":create_tree_artifact.bzl", "create_tree_artifacts")
 
 py_binary(
