--- a/test/aspect/.bazelrc
+++ b/test/aspect/.bazelrc
@@ -1,3 +1,6 @@
+# Always tell why tests fail
+test --test_output=errors
+
 # When working with hermetic Python toolchains, supporting the legacy runfiles layout is needlessly wasting resources.
 # See https://github.com/bazelbuild/rules_python/issues/1653
 common --nolegacy_external_runfiles
