--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,12 +24,25 @@ jobs:
       - name: Build examples
         run: ./scripts/build_examples.sh
 
-  integration-tests-aspect:
+  integration-tests-examples:
     strategy:
       matrix:
         os: [ ubuntu-24.04, macos-15, windows-2022 ]
     runs-on: ${{ matrix.os }}
     needs: [ fast-tests ]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Integration tests - Examples
+        run: python examples/test.py
+      - name: Integration tests - Examples with legacy WORKSPACE setup
+        run: python examples/test.py --legacy-workspace
+
+  integration-tests-aspect:
+    strategy:
+      matrix:
+        os: [ ubuntu-24.04, macos-15, windows-2022 ]
+    runs-on: ${{ matrix.os }}
+    needs: [ fast-tests, integration-tests-examples ]
     steps:
       - uses: actions/checkout@v4
       - name: Integration tests - Aspect
@@ -52,16 +65,3 @@ jobs:
           version: '6.4.0'
       - name: Integration tests - Applying fixes
         run: python test/apply_fixes/execute_tests.py
-
-  integration-tests-examples:
-    strategy:
-      matrix:
-        os: [ ubuntu-24.04, macos-15, windows-2022 ]
-    runs-on: ${{ matrix.os }}
-    needs: [ fast-tests ]
-    steps:
-      - uses: actions/checkout@v4
-      - name: Integration tests - Examples
-        run: python examples/test.py
-      - name: Integration tests - Examples with legacy WORKSPACE setup
-        run: python examples/test.py --legacy-workspace
