refactor(test): Restructure import logic
- Use a consistent style
- Simplify mypy setup
- Ease reusing code

--- a/mypy.ini
+++ b/mypy.ini
@@ -11,5 +11,5 @@ warn_redundant_casts = true
 warn_unused_ignores = true
 warn_no_return = true
 warn_unreachable = true
-# Enable relative imports in the test orchestration scripts
-mypy_path = test/:test/aspect/:test/apply_fixes/
+# Enable imports in the aspect integration test workspace
+mypy_path = test/aspect/
