refactor(test): Deduplicate Result class
Also we give the file containing the `ExpectedResult` class a proper name.

--- a/test/aspect/BUILD
+++ b/test/aspect/BUILD
@@ -1,11 +1,17 @@
-load("@rules_python//python:defs.bzl", "py_test")
+load("@rules_python//python:py_library.bzl", "py_library")
+load("@rules_python//python:py_test.bzl", "py_test")
+
+py_library(
+    name = "expected_result",
+    testonly = True,
+    srcs = ["expected_result.py"],
+    deps = ["@depend_on_what_you_use//test/support"],
+)
 
 py_test(
-    name = "result_test",
-    srcs = [
-        "result.py",
-        "result_test.py",
-    ],
+    name = "expected_result_test",
+    srcs = ["expected_result_test.py"],
+    deps = [":expected_result"],
 )
 
 py_test(
@@ -14,6 +20,7 @@ py_test(
         "test_case.py",
         "test_case_test.py",
     ],
+    deps = [":expected_result"],
 )
 
 py_test(
