feat: Support --noexperimental_python_import_all_repositories
Some users require this setting to mitigate issues due to a large
`PYTHONPATH` created by rules_python.

Fixes: https://github.com/martis42/depend_on_what_you_use/issues/293

--- a/src/apply_fixes/BUILD
+++ b/src/apply_fixes/BUILD
@@ -18,6 +18,8 @@ py_library(
 py_binary(
     name = "main",
     srcs = ["main.py"],
+    # Compatibility to --noexperimental_python_import_all_repositories
+    imports = ["../.."],
     visibility = ["//:__pkg__"],
     deps = [":lib"],
 )
