refactor(deps): Do not automatically update com_google_protobuf
`com_google_protobuf` is a transitive dependency of `rules_cc`. We want to
reference the same version as our `rules_cc` version does.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -22,6 +22,7 @@
   "packageRules": [
     {
       "matchPackagePatterns": [
+        "com_google_protobuf",
         "rules_python",
         "rules_cc"
       ],
