--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,17 +2,15 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended",
-    ":rebaseStalePrs",
+    ":dependencyDashboard",
+    ":enablePreCommit",
     "schedule:monthly",
+    ":rebaseStalePrs",
     ":semanticCommits"
   ],
   "labels": [
     "deps"
   ],
-  "dependencyDashboard": true,
-  "pre-commit": {
-    "enabled": true
-  },
   "enabledManagers": [
     "bazel",
     "bazel-module",
