--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,10 +6,9 @@
     ":enablePreCommit",
     "schedule:monthly",
     ":rebaseStalePrs",
-    ":semanticCommits"
-  ],
-  "labels": [
-    "deps"
+    ":semanticCommits",
+    ":semanticPrefixChore",
+    ":label(renovate)"
   ],
   "enabledManagers": [
     "bazel",
