refactor(deps): Use leaner style to ignore some deps
We duplicate `com_google_protobuf` with `protobuf` as it seems renovate
is not properly ignoring based on `com_google_protobuf` alone.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,18 +18,6 @@
   ],
   "packageRules": [
     {
-      "matchPackagePatterns": [
-        "com_google_protobuf",
-        "rules_python",
-        "rules_cc"
-      ],
-      "matchManagers": [
-        "bazel",
-        "bazel-module"
-      ],
-      "enabled": false
-    },
-    {
       "matchManagers": [
         "bazel",
         "bazel-module"
@@ -37,5 +25,10 @@
       "groupName": "Bazel dependencies",
       "groupSlug": "bazel_deps"
     }
-  ]
+  ],
+  "ignoreDeps": [
+    "com_google_protobuf",
+    "protobuf",
+    "rules_python",
+    "rules_cc"]
 }
