test(bcr): Be compatible to environment without bazelisk
Fixes https://github.com/martis42/depend_on_what_you_use/issues/322

--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -9,4 +9,4 @@ bcr_test_module:
       platform: ${{ platform }}
       bazel: ${{ bazel }}
       shell_commands:
-        - python test.py
+        - python test.py --bazel-bin bazel
