test: Test only Bazel 6 version 6.4.0
Given we test Bazel 6.4 either way as current minimum required Bazel version, it
makes no sense to test 6.5 as well.
Also we stop using WORKSPACE with out aspect integration tests. We did so only
for one Bazel 6 version either way. We do not expect WORKSPACE vs bzlmod to have
any influence on the behavior of DWYU. However, testing only one setup simplifies
the aspect integration test setup and maintenance. That DWYU works with WORKSPACE
is being ensured by the examples and the dedicated workspace_integration tests.

--- a/test/aspect/MODULE.bazel
+++ b/test/aspect/MODULE.bazel
@@ -30,6 +30,12 @@ python.toolchain(python_version = "3.11")
 python.toolchain(python_version = "3.12")
 
 ##
+## Test Dependencies
+##
+
+bazel_dep(name = "platforms", version = "0.0.11")
+
+##
 ## Workspaces for test purposes
 ##
 
@@ -50,12 +56,3 @@ local_path_override(
     module_name = "skip_external_deps_test_repo",
     path = "skip_external_targets/external_dep",
 )
-
-##
-## The Migration phase using WORKSPACE.bzlmod and MODULE.bazel together does not support properly loading the implicit
-## Bazel dependencies. Thus, we need to load some basic things directly. This should become superfluous when we are
-## only using bzlmod eventually
-## Reference https://github.com/bazelbuild/bazel/blob/master/src/MODULE.tools
-##
-
-bazel_dep(name = "platforms", version = "0.0.7")
