test(aspect): Test setup uses rules_python version requested by DWYU
We abandon testing newer rules_python versions as the latest versions are not
compatible to Bazel 6 anymore. Also testing newer rules_python via the aspect
integration tests was always kinda hacky.
If we want to test the latest and greatest versions of our dependencies we
should setup dedicated tests for that similar to the dedicated
workspace_integration tests.

--- a/test/aspect/MODULE.bazel
+++ b/test/aspect/MODULE.bazel
@@ -10,12 +10,10 @@ local_path_override(
 ## Python toolchains for testing compatibility to various Python versions
 ##
 
-# We use a newer rules_python version than the one DWYU depends on to profit from the ability to select a toolchain
-# without specifying the patch version, which is possible from >= 0.30.0 onward.
-# Furthermore, this allows ensuring that we are compatible to new rules_python versions. The most crucial parts of DWYU
-# do not depend on rules_python and therefore we are confident in the example integration tests and unit tests finding
-# all issues related to the rules_python version DWYU depends on.
-bazel_dep(name = "rules_python", version = "0.32.2")
+# We specify by design an outdated rules_python version.
+# bzlmod resolves dependencies to the maximum of all requested versions for all involved modules.
+# Specifying an ancient version here gives us in the end whatever rules_python version DWYU defines as dependency.
+bazel_dep(name = "rules_python", version = "0.12.0")
 
 python = use_extension("@rules_python//python/extensions:python.bzl", "python")
 
