test(aspect): Use default versions in CI instead of custom command
On Windows we can only test a single Bazel and Python  version pair due to bazelized
Python on Windows being extremely slow. Our test matrix already has a default
setup for fast testing without looking at the full test matrix. We should reuse
it here to reduce the maintenance burden.
With us dropping the WORKSPACE setup in those tests, specifying `-p 8.8.18` stopped
working.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,7 +58,7 @@ jobs:
         run: python test/aspect/execute_tests.py
       - name: Integration tests - Aspect
         if: runner.os == 'Windows'
-        run: python test/aspect/execute_tests.py -b 7.0.0 -p 3.8.18
+        run: python test/aspect/execute_tests.py --only-default-version
 
   integration-tests-apply-fixes:
     strategy:
