--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -17,7 +17,9 @@ use_repo(non_module_dependencies, "dwyu_pcpp")
 ###
 
 bazel_dep(name = "aspect_bazel_lib", version = "2.10.0", dev_dependency = True)
-bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = True)
+
+# Hidden dependencies of aspect_bazel_lib macro stardoc_with_diff_test
+bazel_dep(name = "platforms", version = "0.0.11", dev_dependency = True)
 
 python = use_extension(
     "@rules_python//python/extensions:python.bzl",
