--- a/test/aspect/.bazelrc
+++ b/test/aspect/.bazelrc
@@ -4,5 +4,8 @@ startup --max_idle_secs=10
 # Always tell why tests fail
 test --test_output=errors
 
+# The integration tests don't are about higher versions than expected for our dependencies being used
+common --check_direct_dependencies=off
+
 # The symlinks are cluttering the file tree without much value
 common --experimental_convenience_symlinks=ignore
