test(apply_fixes): Test empty list attributes
Test case for the bug fixed in:
https://github.com/martis42/depend_on_what_you_use/pull/280

--- a/test/apply_fixes/missing_dependency/workspace/BUILD
+++ b/test/apply_fixes/missing_dependency/workspace/BUILD
@@ -82,6 +82,7 @@ cc_library(
     deps = [
         ":root_file_lib",
         "//libs:bar",
+        "//libs:empty_lists",
         "//libs:foo",
     ],
 )
