--- a/test/aspect/MODULE.bazel
+++ b/test/aspect/MODULE.bazel
@@ -26,6 +26,7 @@ python.toolchain(python_version = "3.9")
 python.toolchain(python_version = "3.10")
 python.toolchain(python_version = "3.11")
 python.toolchain(python_version = "3.12")
+python.toolchain(python_version = "3.13")
 
 ##
 ## Test Dependencies
