fix(aspect): Ignore non cc deps in target_mapping

--- a/test/aspect/target_mapping/libs/BUILD
+++ b/test/aspect/target_mapping/libs/BUILD
@@ -2,17 +2,30 @@ cc_library(
     name = "a",
     hdrs = ["a.h"],
     visibility = ["//target_mapping:__subpackages__"],
-    deps = [":b"],
+    deps = [
+        ":b",
+        # Test travsing direct deps is robust against non C/CPP deps
+        ":non_cc_thing",
+    ],
 )
 
 cc_library(
     name = "b",
     hdrs = ["b.h"],
     visibility = ["//target_mapping/mapping:__pkg__"],
-    deps = [":c"],
+    deps = [
+        ":c",
+        # Test travsing transitive deps is robust against non C/CPP deps
+        ":non_cc_thing",
+    ],
 )
 
 cc_library(
     name = "c",
     hdrs = ["c.h"],
+)
+
+sh_library(
+    name = "non_cc_thing",
+    srcs = ["non_cc_thing.sh"],
 )
