feat(aspect): Allow disabling the preprocessor
Multiple user reported pcpp taking several minutes for processing
source files. Our new benchmarks confirm this for complex source code.

We revive the parsing code from DWYU 0.0.8 for extracting include statements
while ignoring commented code. This will remain an opt-in behavior, as
ignoring preprocessor directives can easily cause the  wrong include statements
being extracted, if they are guarded by #ifdef logic.
Still, for users with complex code but no conditional includes, this will
be a significant performance improvement. On our test system the improvement
in file processing speed is on the magnitude of factor 100.

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -27,3 +27,5 @@ python = use_extension(
     dev_dependency = True,
 )
 python.toolchain(python_version = "3.8")
+
+bazel_dep(name = "googletest", version = "1.15.0", dev_dependency = True)
