test: Be compatible to latest Bazel 9 release
- Stop using removed Bazel option for Bazel >= 9.0.0
- Explicitly load shell rules, which were removed from Bazel

--- a/test/aspect/MODULE.bazel
+++ b/test/aspect/MODULE.bazel
@@ -33,6 +33,7 @@ python.toolchain(python_version = "3.13")
 ##
 
 bazel_dep(name = "platforms", version = "0.0.11")
+bazel_dep(name = "rules_shell", version = "0.4.1")
 
 ##
 ## Workspaces for test purposes
