--- a/test/aspect/external_repo/BUILD
+++ b/test/aspect/external_repo/BUILD
@@ -1,3 +1,5 @@
+load("@rules_cc//cc:cc_library.bzl", "cc_library")
+
 cc_library(
     name = "use_external_libs",
     hdrs = ["use_external_libs.h"],
