--- a/examples/MODULE.bazel
+++ b/examples/MODULE.bazel
@@ -10,6 +10,11 @@ local_path_override(
 ## One can use DWYU without the content below. We simply need some further things so all examples work.
 ##
 
+# We specify by design an outdated rules_cc version.
+# bzlmod resolves dependencies to the maximum of all requested versions for all involved modules.
+# Specifying an ancient version here gives us in the end at least whatever rules_cc version DWYU defines as dependency.
+bazel_dep(name = "rules_cc", version = "0.0.1")
+
 bazel_dep(name = "external_targets", dev_dependency = True)
 local_path_override(
     module_name = "external_targets",
