--- a/test/apply_fixes/missing_dependency/workspace/configured_lib/BUILD
+++ b/test/apply_fixes/missing_dependency/workspace/configured_lib/BUILD
@@ -1,4 +1,5 @@
 load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
+load("@rules_cc//cc:cc_library.bzl", "cc_library")
 
 bool_flag(
     name = "custom_config",
