--- a/test/apply_fixes/missing_dependency/workspace/other_lib/BUILD
+++ b/test/apply_fixes/missing_dependency/workspace/other_lib/BUILD
@@ -1,3 +1,5 @@
+load("@rules_cc//cc:cc_library.bzl", "cc_library")
+
 # We use this library to prove that multiple header with the same name existing in the dependency is not a problem if
 # they are included with their full path
 cc_library(
