--- a/test/aspect/generated_code/BUILD
+++ b/test/aspect/generated_code/BUILD
@@ -1,3 +1,6 @@
+load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
+load("@rules_cc//cc:cc_library.bzl", "cc_library")
+
 genrule(
     name = "bar_h",
     outs = ["bar.h"],
