--- a/test/aspect/tree_artifact/BUILD
+++ b/test/aspect/tree_artifact/BUILD
@@ -1,3 +1,5 @@
+load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
+load("@rules_cc//cc:cc_library.bzl", "cc_library")
 load("@rules_python//python:py_binary.bzl", "py_binary")
 load(":create_tree_artifact.bzl", "create_tree_artifacts")
 
