refactor(aspect): Use rules_cc abstraction for finding CC toolchains
rules_cc is the forward path for C/C++ specific rules

--- a/src/aspect/BUILD
+++ b/src/aspect/BUILD
@@ -17,6 +17,7 @@ bzl_library(
     visibility = ["//visibility:public"],
     deps = [
         "//src/cc_info_mapping",
+        "@rules_cc//cc:find_cc_toolchain_bzl",
         "@rules_cc//cc/common",
     ],
 )
