feat(aspect): Deduce and ignore headers provided by the CC toolchain
Until now we hard coded a list of standard library and system headers.
While this works in most cases, it is far from perfect. One easily overlooks
system headers by this approach.

The new behavior is for now an opt-in, as we might have overlooked issues
while testing. Bazel CC toolchains can be written with 2 different APIs and
either only reference host artifacts, a mix of host and hermetic artifacts
or a fully hermetic toolchain. Given this complexity, we want to give users
time to file bug reports in case of systematic design flaws.
While we start slow and careful, we aim at making this the default
behavior eventually. Since we are positive this will become the new
default implementation, we do not mark this as experimental.

--- a/.bazelignore
+++ b/.bazelignore
@@ -19,6 +19,7 @@ test/aspect/defines
 test/aspect/external_repo
 test/aspect/generated_code
 test/aspect/ignore_includes
+test/aspect/ignore_toolchain_headers
 test/aspect/implementation_deps
 test/aspect/includes
 test/aspect/platforms
@@ -34,5 +35,7 @@ test/aspect/unused_dep
 test/aspect/using_transitive_dep
 test/aspect/valid
 test/aspect/virtual_includes
+
+test/cc_toolchains/mocked
 
 test/workspace_integration
