--- a/src/aspect/BUILD
+++ b/src/aspect/BUILD
@@ -16,6 +16,7 @@ bzl_library(
     visibility = ["//visibility:public"],
     deps = [
         "//src/cc_info_mapping",
+        "//src/cc_toolchain_headers",
         "@rules_cc//cc:action_names_bzl",
         "@rules_cc//cc:find_cc_toolchain_bzl",
         "@rules_cc//cc/common",
