--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,8 @@ jobs:
         run: ./scripts/test_aspect_tests_scripts.sh
       - name: Build examples
         run: ./scripts/build_examples.sh
+      - name: Execute mocked CC toolchain tests
+        run: ./scripts/test_mocked_cc_toolchains.sh
 
   integration-tests-workspace_integration:
     runs-on: ubuntu-24.04
@@ -45,6 +47,21 @@ jobs:
         run: python examples/test.py
       - name: Integration tests - Examples with legacy WORKSPACE setup
         run: python examples/test.py --legacy-workspace
+
+  integration-tests-upstream_cc_toolchains:
+    strategy:
+      matrix:
+        os: [ ubuntu-24.04, macos-15, windows-2022 ]
+      fail-fast: false
+    runs-on: ${{ matrix.os }}
+    needs: [ fast-tests ]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+      - name: Integration tests - CC toolchain
+        run: python test/cc_toolchains/upstream/test.py --no_output_base
 
   integration-tests-aspect:
     strategy:
