--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -21,11 +21,7 @@ bazel_dep(name = "aspect_bazel_lib", version = "2.19.4", dev_dependency = True)
 # Hidden dependencies of aspect_bazel_lib macro stardoc_with_diff_test
 bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)
 
-python = use_extension(
-    "@rules_python//python/extensions:python.bzl",
-    "python",
-    dev_dependency = True,
-)
+python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
 python.toolchain(python_version = "3.8")
 
 bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)
