--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,6 +36,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-24.04, macos-15, windows-2022 ]
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     needs: [ fast-tests ]
     steps:
@@ -49,6 +50,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-24.04, macos-15, windows-2022 ]
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     needs: [ fast-tests, integration-tests-examples ]
     steps:
@@ -64,6 +66,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-24.04, macos-15, windows-2022 ]
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     needs: [ fast-tests ]
     steps:
