refactor: Proper name for private bzl library

--- a/src/cc_info_mapping/BUILD
+++ b/src/cc_info_mapping/BUILD
@@ -8,7 +8,7 @@ bzl_library(
     ],
     visibility = ["//visibility:public"],
     deps = [
-        "//src/cc_info_mapping/private:bzl_srcs",
+        "//src/cc_info_mapping/private:cc_info_mapping_impl_bzl",
         "//src/utils",
     ],
 )
