test(aspect): Improve CI performance by omitting dedicated output bases
For local testing dedicated output bases are a significant speedup for
incremental testing. In the CI the extra overhead for setting up dedicated
output bases is wasted, as the whole CI node is either way a throw away
system.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -74,10 +74,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Integration tests - Aspect
         if: runner.os != 'Windows'
-        run: python test/aspect/execute_tests.py
+        run: python test/aspect/execute_tests.py --no_output_base
       - name: Integration tests - Aspect
         if: runner.os == 'Windows'
-        run: python test/aspect/execute_tests.py --only-default-version
+        run: python test/aspect/execute_tests.py --only-default-version --no_output_base
 
   integration-tests-apply-fixes:
     strategy:
