refactor: Make explicit that the utility functions are an impl detail

--- a/src/cc_info_mapping/BUILD
+++ b/src/cc_info_mapping/BUILD
@@ -9,7 +9,7 @@ bzl_library(
     visibility = ["//visibility:public"],
     deps = [
         "//src/cc_info_mapping/private:cc_info_mapping_impl_bzl",
-        "//src/utils",
+        "//src/private:utils",
     ],
 )
 
