--- a/src/cc_toolchain_headers/BUILD
+++ b/src/cc_toolchain_headers/BUILD
@@ -9,6 +9,6 @@ bzl_library(
     visibility = ["//visibility:public"],
     deps = [
         "//src/cc_toolchain_headers/private:gather_cc_toolchain_headers_bzl",
-        "//src/utils",
+        "//src/private:utils",
     ],
 )
